# dpdumper

./: CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
examples/: 231000_LCE.toml  2532.toml  2716.toml  2732.toml  27512.toml  27C1001.toml  27C2001.toml  PAL10x8.toml  PAL12x6.toml  dummy.toml
src/: dpdumper.py  dupico_dumper.py
src/dpdumper/: __init__.py  dumper_utilities.py  frontend.py  hl_board_utilities.py  outfile_utilities.py
src/dpdumper/ic/: ic_definition.py  ic_loader.py  ic_types.py
src/dupico_dumper/: __init__.py  board_commands.py  command_structures.py  dumper_utilities.py  frontend.py  hl_board_utilities.py  ll_board_utilities.py  outfile_utilities.py
src/dupico_dumper/dupico_library/: board_commands.py  board_utilities.py  command_structures.py  pin_mapping_utilities.py
src/dupico_dumper/ic/: ic_definition.py  ic_loader.py  ic_types.py  ic_utilities.py
tests/: conftest.py  test_ic_utilities.py
